--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,29 @@
     dominant-baseline: middle;
 }
 
+/* CUSTOMIZE THE CAROUSEL
+-------------------------------------------------- */
+
+/* Carousel base class */
+.carousel {
+  margin-bottom: 4rem;
+}
+
+/* Since positioning the image, we need to help out the caption */
+.carousel-caption {
+  bottom: 3rem;
+  z-index: 10;
+}
+
+/* Declare heights because of positioning of img element */
+.carousel-item {
+  height: 32rem;
+}
+
+.card-item {
+  height: 20rem;
+}
+
 .blog-header {
   border-bottom: 1px solid #e5e5e5;
 }
